# rust-servers

./: .gitignore  README.md
.github/workflows/: cli.yml
rocket-server/: .env.example  Cargo.toml  README.MD  diesel.toml
rocket-server/migrations/2024-08-01-225429_create_init_table/: down.sql  up.sql
rocket-server/src/: main.rs  schema.rs
rocket-server/src/handler/: catcher_handler.rs  mod.rs  post_handler.rs  user_handler.rs
rocket-server/src/models/: db.rs  jwt.rs  mod.rs  response.rs
rocket-server/src/services/: mod.rs  post_service.rs  user_service.rs
rocket-server/src/utils/: db_connection.rs  jwt.rs  mod.rs
std_server/: Cargo.toml  README.md
std_server/public/: 404.html  index.html  second.html
std_server/src/: main.rs
tide-server/: Cargo.toml
tide-server/src/: main.rs
warp-server/: Cargo.toml
warp-server/src/: main.rs
