[package]
name = "rocket-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.1.1", features = ["postgres","sqlite","r2d2","chrono"] }
dotenvy = "0.15"
diesel-async = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = { version = "9" }
chrono = { version = "0.4.38", features = ["serde"] }
cuid = "1.3.2"
bcrypt = "0.15.1"
